test/sema/no_main_function.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
// CHECK: [[# @LINE - 1 ]]:1: error: main function not found in global module

fn a() -> i32 {
}